[gd_scene load_steps=20 format=2]

[ext_resource path="res://menu_icons/new_buttons/g7946.png" type="Texture" id=1]
[ext_resource path="res://menu_icons/menu background.png" type="Texture" id=2]
[ext_resource path="res://menu_icons/new_buttons/g7472.png" type="Texture" id=3]
[ext_resource path="res://menu_icons/new_buttons/g21380.png" type="Texture" id=4]
[ext_resource path="res://menu_icons/new_buttons/g10386.png" type="Texture" id=5]
[ext_resource path="res://Menu.gd" type="Script" id=6]
[ext_resource path="res://menu_icons/logo_title/title.png" type="Texture" id=7]
[ext_resource path="res://ice_buttons/g114613.png" type="Texture" id=8]
[ext_resource path="res://ice_buttons/g114716.png" type="Texture" id=9]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
rect_scale = Vector2( 0.725, 0.76 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="TextureRect"]
margin_left = 63.4772
margin_top = 161.481
margin_right = 376.477
margin_bottom = 695.481
rect_scale = Vector2( 1.1, 1 )
custom_constants/separation = 30
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start" type="Button" parent="TextureRect/VBoxContainer"]
margin_right = 312.0
margin_bottom = 111.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
icon = ExtResource( 1 )

[node name="HowToPlay" type="Button" parent="TextureRect/VBoxContainer"]
margin_top = 141.0
margin_right = 312.0
margin_bottom = 252.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
icon = ExtResource( 3 )

[node name="Participants" type="Button" parent="TextureRect/VBoxContainer"]
margin_top = 282.0
margin_right = 312.0
margin_bottom = 393.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
icon = ExtResource( 4 )

[node name="Exit" type="Button" parent="TextureRect/VBoxContainer"]
margin_top = 423.0
margin_right = 312.0
margin_bottom = 534.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
icon = ExtResource( 5 )

[node name="TextureRect2" type="TextureRect" parent="."]
margin_left = 465.104
margin_top = 78.4003
margin_right = 1169.1
margin_bottom = 518.4
rect_scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 7 )

[node name="SoundOn" type="Button" parent="."]
margin_left = 925.0
margin_top = 15.0
margin_right = 1048.0
margin_bottom = 97.0
rect_scale = Vector2( 0.7, 0.7 )
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 7 )
custom_styles/focus = SubResource( 8 )
custom_styles/disabled = SubResource( 9 )
custom_styles/normal = SubResource( 10 )
icon = ExtResource( 8 )

[node name="SoundOff" type="Button" parent="."]
margin_left = 925.0
margin_top = 15.0
margin_right = 1048.0
margin_bottom = 97.0
rect_scale = Vector2( 0.7, 0.7 )
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 7 )
custom_styles/focus = SubResource( 8 )
custom_styles/disabled = SubResource( 9 )
custom_styles/normal = SubResource( 10 )
icon = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="TextureRect/VBoxContainer/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="TextureRect/VBoxContainer/HowToPlay" to="." method="_on_HowToPlay_pressed"]
[connection signal="pressed" from="TextureRect/VBoxContainer/Participants" to="." method="_on_Participants_pressed"]
[connection signal="pressed" from="TextureRect/VBoxContainer/Exit" to="." method="_on_Exit_pressed"]
[connection signal="pressed" from="SoundOn" to="." method="_on_SoundOn_pressed"]
[connection signal="pressed" from="SoundOff" to="." method="_on_SoundOff_pressed"]
